{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 264,
  "lineage": "0b41a1dc-0117-e214-fc8b-4366fb4ffdb2",
  "resources": [
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_instance",
      "name": "k3s",
      "provider": "module.aws.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fd63e471b04e22d0",
            "arn": "arn:aws:ec2:us-east-1:912406108031:instance/i-0b9a1b8936588224a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b9a1b8936588224a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "rancher",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05dad7fffeaa54a8e",
            "private_dns": "ip-172-16-10-161.ec2.internal",
            "private_ip": "172.16.10.161",
            "public_ip": "54.87.17.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00ff50990d8c54f19",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec575cf374adff00",
            "tags": {
              "Name": "k3s"
            },
            "tags_all": {
              "Name": "k3s"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cf25549a0931edd7"
            ]
          },
          "dependencies": [
            "module.aws.aws_key_pair.generated_key",
            "module.aws.aws_security_group.allow_in",
            "module.aws.aws_subnet.rancher",
            "module.aws.aws_vpc.cluster",
            "module.aws.data.aws_ami.ubuntu",
            "module.aws.tls_private_key.chave"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "module.aws.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fd63e471b04e22d0",
            "arn": "arn:aws:ec2:us-east-1:912406108031:instance/i-07a9d32c9bb501c84",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07a9d32c9bb501c84",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "rancher",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dd6db81409ddfc6b",
            "private_dns": "ip-172-16-10-185.ec2.internal",
            "private_ip": "172.16.10.185",
            "public_ip": "34.224.23.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07aa28ca2150deef8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec575cf374adff00",
            "tags": {
              "Name": "master"
            },
            "tags_all": {
              "Name": "master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cf25549a0931edd7"
            ]
          },
          "dependencies": [
            "module.aws.aws_key_pair.generated_key",
            "module.aws.aws_security_group.allow_in",
            "module.aws.aws_subnet.rancher",
            "module.aws.aws_vpc.cluster",
            "module.aws.data.aws_ami.ubuntu",
            "module.aws.tls_private_key.chave"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "module.aws.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:912406108031:internet-gateway/igw-06937644e177d76d9",
            "id": "igw-06937644e177d76d9",
            "owner_id": "912406108031",
            "vpc_id": "vpc-0de71474239b38f68"
          },
          "dependencies": [
            "module.aws.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "module.aws.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:912406108031:route-table/rtb-07f7e654893416dde",
            "id": "rtb-07f7e654893416dde",
            "owner_id": "912406108031",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06937644e177d76d9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0de71474239b38f68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws.aws_internet_gateway.gw",
            "module.aws.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association",
      "provider": "module.aws.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07928b21778a46781",
            "route_table_id": "rtb-07f7e654893416dde",
            "subnet_id": "subnet-0ec575cf374adff00"
          },
          "dependencies": [
            "module.aws.aws_internet_gateway.gw",
            "module.aws.aws_route_table.route",
            "module.aws.aws_subnet.rancher",
            "module.aws.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_in",
      "provider": "module.aws.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:912406108031:security-group/sg-0cf25549a0931edd7",
            "description": "Allow Entrada de portas",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf25549a0931edd7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RANCHER01",
                "from_port": 2376,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2376
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RANCHER02",
                "from_port": 6443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "NODES",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_in",
            "name_prefix": "",
            "owner_id": "912406108031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k3s"
            },
            "tags_all": {
              "Name": "k3s"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de71474239b38f68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws.aws_vpc.cluster"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rancher",
      "provider": "module.aws.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:912406108031:subnet/subnet-0ec575cf374adff00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec575cf374adff00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912406108031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k3s"
            },
            "tags_all": {
              "Name": "k3s"
            },
            "vpc_id": "vpc-0de71474239b38f68"
          },
          "dependencies": [
            "module.aws.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cluster",
      "provider": "module.aws.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:912406108031:vpc/vpc-0de71474239b38f68",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0708b709b6923a86f",
            "default_route_table_id": "rtb-033d6fe3f15fd0623",
            "default_security_group_id": "sg-0144568f2139bb28b",
            "dhcp_options_id": "dopt-ce75b8b4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0de71474239b38f68",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-033d6fe3f15fd0623",
            "owner_id": "912406108031"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}